# deepracer-utils

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  TASKS.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: test.yml
deepracer/: __init__.py  __main__.py  _version.py  utils.py
deepracer/boto3/: __init__.py
deepracer/boto3_enhancer/: __init__.py
deepracer/boto3_enhancer/models/deepracer/2019-04-01/: service-2.json
deepracer/console/: __init__.py  helper.py
deepracer/edit_action_speeds/: editActionSpeeds.py
deepracer/logs/: __init__.py  cw_utils.py  handler.py  load_metrics.py  log.py  log_utils.py  metrics.py  misc.py  stability.py
deepracer/model/: __init__.py  visualization.py
deepracer/tracks/: __init__.py  track_utils.py
deepracer/update_action_speeds/: action_space.json  updateActionSpeeds.py
docs/: development.md  examples.md  folder-structures.md  output-format.md
tests/deepracer/boto3_enhancer/: test_boto3_client.py
tests/deepracer/console/: test_helper.py
tests/deepracer/logs/: test_logs.py  test_metrics.py  test_plotting_utils.py  test_stability.py
tests/deepracer/logs/sample-drfc-1-logs/: reward_function.py
tests/deepracer/logs/sample-drfc-1-logs/evaluation-20220709200242/evaluation-simtrace/: 0-iteration.csv
tests/deepracer/logs/sample-drfc-1-logs/evaluation-20220709200509/evaluation-simtrace/: 0-iteration.csv
tests/deepracer/logs/sample-drfc-1-logs/evaluation-20220709200711/evaluation-simtrace/: 0-iteration.csv
tests/deepracer/logs/sample-drfc-1-logs/evaluation-simtrace/: 0-iteration.csv
tests/deepracer/logs/sample-drfc-1-logs/ip/: hyperparameters.json
tests/deepracer/logs/sample-drfc-1-logs/metrics/: EvaluationMetrics-1656955681.json  EvaluationMetrics-1656955854.json  EvaluationMetrics-20220709200242.json  EvaluationMetrics-20220709200509.json  EvaluationMetrics-20220709200711.json  TrainingMetrics.json
tests/deepracer/logs/sample-drfc-1-logs/model/: model_metadata.json
tests/deepracer/logs/sample-drfc-1-logs/training-simtrace/: 0-iteration.csv  1-iteration.csv  10-iteration.csv  11-iteration.csv  12-iteration.csv  13-iteration.csv  14-iteration.csv  15-iteration.csv  16-iteration.csv  17-iteration.csv  18-iteration.csv  19-iteration.csv  2-iteration.csv  20-iteration.csv  21-iteration.csv  22-iteration.csv  23-iteration.csv  24-iteration.csv  25-iteration.csv  26-iteration.csv  3-iteration.csv  4-iteration.csv  5-iteration.csv  6-iteration.csv  7-iteration.csv  8-iteration.csv  9-iteration.csv
tests/deepracer/logs/sample-drfc-3-logs/0/training-simtrace/: 0-iteration.csv  1-iteration.csv  10-iteration.csv  11-iteration.csv  12-iteration.csv  13-iteration.csv  14-iteration.csv  15-iteration.csv  16-iteration.csv  17-iteration.csv  18-iteration.csv  19-iteration.csv  2-iteration.csv  20-iteration.csv  21-iteration.csv  22-iteration.csv  3-iteration.csv  4-iteration.csv  5-iteration.csv  6-iteration.csv  7-iteration.csv  8-iteration.csv  9-iteration.csv
tests/deepracer/logs/sample-drfc-3-logs/1/training-simtrace/: 0-iteration.csv  1-iteration.csv  10-iteration.csv  11-iteration.csv  12-iteration.csv  13-iteration.csv  (+17 more)
tests/deepracer/logs/sample-drfc-3-logs/evaluation-simtrace/: 0-iteration.csv
tests/deepracer/logs/sample-drfc-3-logs/ip/: hyperparameters.json
tests/deepracer/logs/sample-drfc-3-logs/metrics/: EvaluationMetrics-1656949495.json  EvaluationMetrics-1656949780.json  EvaluationMetrics-20220709201503.json  EvaluationMetrics-20220709201704.json  EvaluationMetrics-20220709201920.json  TrainingMetrics.json  TrainingMetrics_1.json  TrainingMetrics_2.json
tests/deepracer/model/: test_visualization.py
tests/deepracer/track_utils/: test_track_utils.py
(+31 files in other folders)
